--- a/Backend/package.json
+++ b/Backend/package.json
@@ -23,6 +23,7 @@
     "simple-json-db": "^1.2.3",
     "socket.io": "^4.2.0",
     "systeminformation": "^5.8.7",
+    "twilio": "^3.67.2",
     "winston": "^3.3.3"
   }
 }
