--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -9,6 +9,8 @@
   "dependencies": {
     "bootstrap": "^5.1.0",
     "core-js": "^3.16.3",
+    "highcharts": "^9.2.2",
+    "highcharts-vue": "^1.4.0",
     "socket.io-client": "^4.1.3",
     "vue": "^3.2.6",
     "vue-3-socket.io": "^1.0.4",
