--- a/Backend/package.json
+++ b/Backend/package.json
@@ -10,8 +10,9 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@influxdata/influxdb-client": "^1.17.0",
+    "@influxdata/influxdb-client": "^1.18.0",
     "ads1115": "^1.2.0",
+    "bcrypt": "^5.0.1",
     "cors": "^2.8.5",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
@@ -19,13 +20,12 @@
     "i2c-bus": "^5.2.2",
     "jsonwebtoken": "^8.5.1",
     "md5": "^2.3.0",
-    "mongodb": "^4.1.1",
+    "mongodb": "^4.1.2",
     "node-cron": "^3.0.0",
     "read-last-lines": "^1.8.0",
     "simple-json-db": "^1.2.3",
     "socket.io": "^4.2.0",
-    "systeminformation": "^5.8.7",
-    "twilio": "^3.67.2",
-    "winston": "^3.3.3"
+    "systeminformation": "^5.9.4",
+    "twilio": "^3.68.0"
   }
 }
