--- a/Backend/package.json
+++ b/Backend/package.json
@@ -13,7 +13,7 @@
     "@influxdata/influxdb-client": "^1.18.0",
     "ads1115": "^1.2.0",
     "bcrypt": "^5.0.1",
-    "cors": "^2.8.5",
+    "cookie-parser": "^1.4.5",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "express-rate-limit": "^5.3.0",
