Basic GPIO example working.

--- a/Docker/node-red/data/.config.users.json
+++ b/Docker/node-red/data/.config.users.json
@@ -18,6 +18,7 @@
             "context": {
                 "flowRefresh": false
             }
-        }
+        },
+        "menu-menu-item-sidebar": true
     }
 }
