--- a/Docker/node-red/data/package.json
+++ b/Docker/node-red/data/package.json
@@ -4,6 +4,7 @@
     "version": "0.0.1",
     "private": true,
     "dependencies": {
+        "node-red-contrib-influxdb": "~0.6.1",
         "node-red-node-pi-gpiod": "~0.4.0"
     }
 }
