--- a/Docker/docker-nodered-influxdb-pigpiod.yml
+++ b/Docker/docker-nodered-influxdb-pigpiod.yml
@@ -16,7 +16,7 @@ services:
   nodered:
     image: nodered/node-red:latest
     container_name: nodered
-    restart: unless-stopped
+    restart: always
     ports:
       - "51880:1880"
     networks:
@@ -53,7 +53,7 @@ services:
     image: zinen2/alpine-pigpiod:arm64v8
     container_name: pigpiod
     privileged: true
-    restart: unless-stopped
+    restart: always
     ports:
       - "8888:8888"
     networks:
