--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -8,19 +8,19 @@
   },
   "dependencies": {
     "bootstrap": "^5.1.3",
-    "core-js": "^3.22.3",
-    "highcharts": "^9.3.3",
+    "core-js": "^3.22.4",
+    "highcharts": "^10.1.0",
     "highcharts-vue": "^1.4.0",
     "socket.io-client": "^4.5.0",
     "vue": "^3.2.33",
     "vue-3-socket.io": "^1.0.5",
-    "vue-router": "^4.0.14",
+    "vue-router": "^4.0.15",
     "vuex": "^4.0.2"
   },
   "devDependencies": {
-    "@vue/cli-plugin-babel": "~4.5.0",
-    "@vue/cli-plugin-router": "~4.5.0",
-    "@vue/cli-service": "~4.5.0",
+    "@vue/cli-plugin-babel": "^5.0.4",
+    "@vue/cli-plugin-router": "^5.0.4",
+    "@vue/cli-service": "^5.0.4",
     "@vue/compiler-sfc": "^3.2.6"
   }
 }
