Improve flows in node-red, adding I2C functionality. Docker-compose also was improved.

--- a/Docker/docker-nodered-influxdb-pigpiod.yml
+++ b/Docker/docker-nodered-influxdb-pigpiod.yml
@@ -22,6 +22,8 @@ services:
       - iot-net
     volumes:
       - /home/pi/Code/ACM/Docker/node-red/data:/data
+    devices:
+      - /dev/i2c-1:/dev/i2c-1
     depends_on:
       pigpiod:
         condition: service_started
